fixed spacing to prevent vertical overflow

--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,6 @@ section {
 	justify-content: center;
 	align-items: center;
 	gap: 3rem;
-	margin-bottom: 5rem;
 }
 
 .options-container {
@@ -53,6 +52,7 @@ section {
 	width: 75%;
 	flex-wrap: wrap;
 	gap: 2rem;
+	margin-bottom: 2rem;
 }
 
 @media (max-width: 820px) {
